# ewald

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
python/: Cargo.toml  PYPI_README.md  install_py.ps1  pyproject.toml
python/src/: lib.rs
src/: cuda_ffi.rs  cufft.rs  ffi_shared.rs  fft.rs  gpu_shared.rs  lib.rs  short_range.rs  vk_fft.c  vk_fft.h  vk_fft.rs  vk_fft_cuda.c  vkfft_wrapper.c
src/cuda/: cufft.cu  kernels.cu  shared.cu  spme.cu  spme_cufft.cu  spme_shared.cu  vk_fft.cu  vk_fft.h
