[package]
name = "ewald"
version = "0.1.10"
edition = "2024"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "Ewald SPME force calculations"
keywords = ["n-body", "biology", "chemistry", "barnes", "dynamics"]
categories = [
    "algorithms",
    "mathematics",
    "science",
    "algorithms",
]
repository = "https://github.com/David-OConnor/ewald"
documentation = "https://docs.rs/ewald"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]


[dependencies]
lin_alg = "1.3.11"
# We use this to get the erf error function for use in the Ewald approximation in MD
# todo: Way to avoid this dep for something lighter?
statrs = "0.18.0"

# `realfft` is an augmentation that allows for R2C and C2R functionality.
rustfft = "6.4.1"
realfft = "3.5.0"

rayon = "1.11.0"  # Parallel execution on CPU using thread pools.

[target.'cfg(not(target_os = "windows"))'.dependencies]
cudarc = { version = "0.18.1", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-linking", "cuda-13000"], optional=true }
[target.'cfg(target_os = "windows")'.dependencies]
cudarc = { version = "0.18.1", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-linking", "cuda-13000"], optional=true }

[build-dependencies]
cuda_setup = { version = "0.1.9", optional = true }
cc = "1.2.47"


[features]
cuda = ["cuda_setup", "cudarc", "lin_alg/cuda"]
cufft = ["cuda"]
vkfft = ["cuda"]