[package]
name = "ewald_py"
version = "0.1.7"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
ewald_rs = { package = "ewald", path = "..", features = ["cuda"] }
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py310"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
cudarc = { version = "0.17.2", default-features = false, features = ["std", "driver", "dynamic-linking", "cuda-13000"], optional=true }
[target.'cfg(target_os = "windows")'.dependencies]
cudarc = { version = "0.17.2", default-features = false, features = ["std", "driver", "dynamic-loading", "cuda-13000"], optional=true }

lin_alg = "1.3.5"